210706|패캠 node 올인원 01.11 ~ 02.05
01.javascript
  11_ES6

02.nodeJs기초
  01_nodeJs란
  04_모듈패턴
  05_npm

--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/01_javascript/src/01_javascript/10.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/01_javascript/src/01_javascript/10.html
@@ -19,10 +19,12 @@
       var num = 1;
       $(document).ready(function () {
         $("#num").html(num);
-        $("#plus").click(function () {
+        const a = $("#plus").click(function () {
           num++;
           $("#num").html(num);
+          return num;
         });
+        console.log(num);
       });
     </script>
   </body>
