--- a/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/01_javascript/src/01_javascript/10_2.html
+++ b/javascript/nodejs/패스트캠퍼스/Node 웹 프로그래밍 올인원 패키지/01_javascript/src/01_javascript/10_2.html
@@ -18,7 +18,7 @@
       };
 
       $("#abc").click(function () {
-        console.log("클릭을 만들어 봤어요");
+        console.log("클릭");
       });
     </script>
   </body>
